--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ defaults:
 # Site Author
 author:
   name: 박지웅
-  picture: /images/michael-rose-photo.jpg
+  picture: /images/profile.jpg
   email:
   twitter:
   links:
