--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ defaults:
 # Site Author
 author:
   name: 박지웅
-  picture: https://bluenada.github.io/images/profile.jpg
+  picture: https://bluenada.github.io/images/profile.JPG
   email:
   twitter:
   links:
